--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample-vue-app",
+  "name": "nodah",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.3",
     "axios": "^0.25.0",
     "balloon-css": "^1.2.0",
     "element-plus": "^1.3.0-beta.7",
@@ -20,6 +21,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
     "sass": "^1.49.0",
+    "unplugin-auto-import": "^0.6.6",
+    "unplugin-vue-components": "^0.18.3",
     "vite": "^2.7.2"
   }
 }
