--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "tns-template-blank-svelte",
-  "displayName": "Blank Svelte",
-  "templateType": "App template",
-  "author": "David Pershouse (https://github.com/halfnelson)",
+  "name": "yomu",
+  "displayName": "YOMU",
+  "templateType": "YOMU template",
+  "author": "Naren (https://github.com/narender56)",
   "version": "7.0.0",
   "main": "app.js",
   "description": "Blank template for Nativescript application using Svelte",
   "license": "Apache-2.0",
-  "repository": "https://github.com/halfnelson/svelte-native-template",
+  "repository": "https://github.com/narender56/yomu",
   "dependencies": {
     "@nativescript-community/ui-pager": "^13.0.37",
     "@nativescript/camera": "^5.0.12",
     "@nativescript/core": "~7.0.0",
     "@nativescript/imagepicker": "^1.0.6",
+    "@nativescript/localize": "^5.0.4",
     "@nativescript/theme": "~2.3.3",
     "@nativescript/webpack": "3.0.0",
     "katex": "^0.15.6",
